# springbok

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  index.html  package-lock.json  package.json  splashscreen.html  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml  test.yml  upload_asset.sh
macos/Contents/: Info.plist
macos/Contents/MacOS/: README.md
macos/Contents/Resources/: icon.icns
src/: App.tsx  commands.ts  image_processing.rs  index.css  main.rs  main.tsx  routers.tsx  state.rs  storages.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
src/components/: theme-provider.tsx
src/helpers/: utils.ts
src/i18n/: en.ts  zh.ts
src/pages/: Home.tsx  Setting.tsx
src/states/: filetree.ts  setting.ts
ui/: appwindow.slint
