[package]
name = "springbok"
version = "0.2.3"
authors = ["tree.xie@outlook.com"]
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bytesize = "1.3.0"
crossbeam-channel = "0.5.13"
glob = "0.3.1"
home = "0.5.9"
imageoptimize = "0.1.5"
num_cpus = "1.16.0"
once_cell = "1.19.0"
parking_lot = "0.12.3"
rfdx = "0.1.2"
rgb = "0.8.50"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.32"
slint = "1.7.2"
snafu = "0.8.4"
substring = "1.4.5"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }

[build-dependencies]
slint-build = "1.7.2"

[profile.release]
codegen-units = 1
# lto = true
