[package]
name = "springbok"
version = "0.3.16"
description = "GUI image optimizer build on tauri"
authors = ["tree.xie@outlook.com"]
license = "Apache License 2.0"
repository = "https://github.com/vicanso/springbok"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "springbok_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = ["protocol-asset"] }
tauri-plugin-shell = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
imageoptimize = "0.4.0"
snafu = "0.8.9"
tokio = { version = "1.48.0", default-features = false, features = ["fs"] }
blake3 = "1.8.2"
tauri-plugin-os = "2.3.1"
once_cell = "1.21.3"
glob = "0.3.3"
tauri-plugin-dialog = "2.4.0"
base64 = "0.22.1"
walkdir = "2.5.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
