[package]
name = "springbok"
version = "0.3.18"
description = "GUI image optimizer build on tauri"
authors = ["tree.xie@outlook.com"]
license = "Apache License 2.0"
repository = "https://github.com/vicanso/springbok"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "springbok_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
imageoptimize = "0.4.0"
snafu = "0.9.0"
tokio = { version = "1.50.0", default-features = false, features = ["fs"] }
blake3 = "1.8.3"
tauri-plugin-os = "2.3.2"
once_cell = "1.21.4"
glob = "0.3.3"
tauri-plugin-dialog = "2.7.0"
base64 = "0.22.1"
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
